Added roboto as secondary font

--- a/src/Components/Generic/Auth/auth.scss
+++ b/src/Components/Generic/Auth/auth.scss
@@ -46,7 +46,7 @@
 
 .ad_auth_form_input {
   height: 56px;
-  font-family: Lato;
+  font-family: Lato, Roboto;
   font-style: normal;
   font-weight: 300;
   font-size: 18px;
@@ -54,7 +54,7 @@
 }
 
 .label {
-  font-family: Lato;
+  font-family: Lato, Roboto;
   font-style: normal;
   font-weight: 300;
   font-size: 20px;
