--- a/src/Components/Generic/Cards/LgCard/publishedCard.scss
+++ b/src/Components/Generic/Cards/LgCard/publishedCard.scss
@@ -14,7 +14,7 @@
     align-items: center;
 
     span {
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: 600;
       font-size: 28px;
@@ -46,7 +46,7 @@
 
   p {
     margin: 1rem 0 0 1rem;
-    font-family: Lato;
+    font-family: Lato, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -99,7 +99,7 @@
 
       span {
         width: 64px;
-        font-family: Lato;
+        font-family: Lato, Roboto;
         font-style: normal;
         font-weight: normal;
         font-size: 24px;
@@ -127,7 +127,7 @@
     justify-self: center;
 
     .value {
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: 500;
       font-size: 20px;
@@ -139,7 +139,7 @@
     }
 
     .label {
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
@@ -174,7 +174,7 @@
 
   .modulesBox {
     span {
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 28px;
