--- a/src/Components/Generic/Footer/Footer.scss
+++ b/src/Components/Generic/Footer/Footer.scss
@@ -32,7 +32,7 @@
       border: 0px;
       width: auto;
 
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: 400;
       font-size: 20px;
@@ -61,7 +61,7 @@
       color: #ffffff;
       border: 0px;
 
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: 900;
       font-size: 48px;
@@ -81,7 +81,7 @@
       color: #ffffff;
       border: 0px;
 
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: 300;
       font-size: 20px;
@@ -100,7 +100,7 @@
       color: #ffffff;
       border: 0px;
 
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: lighter;
       font-size: 20px;
