--- a/src/Components/Generic/Forms/course.scss
+++ b/src/Components/Generic/Forms/course.scss
@@ -31,7 +31,7 @@
   line-height: 29px;
   align-items: center;
   span {
-    font-family: Lato;
+    font-family: Lato, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -50,7 +50,7 @@
 // }
 
 .ad_course_form_input {
-  font-family: Lato;
+  font-family: Lato, Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -81,7 +81,7 @@
 
     span {
       margin-right: 3rem;
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: 500;
       font-size: 20px;
