--- a/src/Components/Generic/Forms/tagcat.scss
+++ b/src/Components/Generic/Forms/tagcat.scss
@@ -1,7 +1,7 @@
 @import "../../../../static/styles/globals.scss";
 
 // span {
-//   font-family: Lato;
+//   font-family: Lato, Roboto;
 //   font-style: normal;
 //   font-weight: lighter;
 //   font-size: 16px;
