--- a/src/Components/Generic/Navbar/navbar.scss
+++ b/src/Components/Generic/Navbar/navbar.scss
@@ -32,7 +32,7 @@
     }
   }
 
-  font-family: Barlow;
+  font-family: Barlow, Roboto;
   font-style: normal;
   font-weight: 600;
   font-size: 40px;
