--- a/src/Components/Generic/Searchbar/searchbar.scss
+++ b/src/Components/Generic/Searchbar/searchbar.scss
@@ -12,7 +12,7 @@
     border-radius: 3px;
     margin-right: 1rem;
 
-    font-family: Barlow;
+    font-family: Barlow, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -39,7 +39,7 @@
     border: 2px solid #3880fd;
     border-radius: 3px;
 
-    font-family: Barlow;
+    font-family: Barlow, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
