--- a/src/Components/Plugins/Contribute/contribute.scss
+++ b/src/Components/Plugins/Contribute/contribute.scss
@@ -27,7 +27,7 @@
         height: 56px;
         background: $White-0;
         border: 0px;
-        font-family: Barlow;
+        font-family: Barlow, Roboto;
         font-style: normal;
         font-weight: normal;
         font-size: 20px;
@@ -67,7 +67,7 @@
 
       span {
         margin-right: 1.3rem;
-        font-family: Barlow;
+        font-family: Barlow, Roboto;
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
