--- a/src/Components/Plugins/Index/HeroCard/HeroCard.scss
+++ b/src/Components/Plugins/Index/HeroCard/HeroCard.scss
@@ -23,7 +23,7 @@
 
   span {
     text-align: center;
-    font-family: Scope One;
+    font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: bold;
     font-size: 64px;
@@ -47,7 +47,7 @@
   border: 0px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
 
-  font-family: Barlow;
+  font-family: Barlow, Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
