--- a/src/Components/Plugins/Index/Partners/Partners.scss
+++ b/src/Components/Plugins/Index/Partners/Partners.scss
@@ -5,7 +5,7 @@
 
   span {
     margin-left: 4rem;
-    font-family: Scope One;
+    font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: bolder;
     font-size: 48px;
