--- a/src/Components/Plugins/Index/Testimonials/Testimonials.scss
+++ b/src/Components/Plugins/Index/Testimonials/Testimonials.scss
@@ -5,7 +5,7 @@
 
   span {
     margin-left: 3rem;
-    font-family: Scope One;
+    font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: bolder;
     font-size: 48px;
@@ -38,7 +38,7 @@
       z-index: -2;
     }
     span {
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
@@ -57,7 +57,7 @@
   border: 0px;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
 
-  font-family: Barlow;
+  font-family: Barlow, Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
