--- a/src/Components/Plugins/Index/TopCourses/TopCourses.scss
+++ b/src/Components/Plugins/Index/TopCourses/TopCourses.scss
@@ -5,7 +5,7 @@
 
   span {
     padding-left: 4rem;
-    font-family: Scope One;
+    font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: bolder;
     font-size: 48px;
@@ -58,7 +58,7 @@
         // box-sizing: border-box;
         // border-radius: 5px;
 
-        font-family: Barlow;
+        font-family: Barlow, Roboto;
         font-style: normal;
         font-weight: normal;
         font-size: 28px;
