--- a/static/styles/not_found.scss
+++ b/static/styles/not_found.scss
@@ -26,7 +26,7 @@
 
     p {
       margin-top: 4rem;
-      font-family: Scope one;
+      font-family: Scope One, Roboto;
       font-style: normal;
       font-weight: bold;
       font-size: 32px;
