--- a/src/Components/Generic/Cards/AssignmentCard.scss
+++ b/src/Components/Generic/Cards/AssignmentCard.scss
@@ -20,7 +20,7 @@
   }
 
   span {
-    font-family: Lato;
+    font-family: Lato, Roboto;
     font-style: normal;
     font-weight: lighter;
     font-size: 20px;
@@ -40,7 +40,7 @@
       padding: 0 0.5rem 0 0.5rem;
       text-align: center;
       .value {
-        font-family: Barlow;
+        font-family: Barlow, Roboto;
         font-style: normal;
         font-weight: 900;
         font-size: 24px;
@@ -49,7 +49,7 @@
         color: #e47a23;
       }
       .label {
-        font-family: Barlow;
+        font-family: Barlow, Roboto;
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
