--- a/src/Components/Generic/Cards/CourseCard.scss
+++ b/src/Components/Generic/Cards/CourseCard.scss
@@ -16,7 +16,7 @@
 }
 
 %font-label {
-  font-family: Barlow;
+  font-family: Barlow, Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -102,7 +102,7 @@
     // justify-self: center;
     // padding: 1rem;
 
-    font-family: Scope One;
+    font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -120,7 +120,7 @@
 
   span {
     padding: 0;
-    font-family: Barlow;
+    font-family: Barlow, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -138,7 +138,7 @@
 
   span {
     padding: 0;
-    font-family: Barlow;
+    font-family: Barlow, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
