--- a/src/Components/Generic/Cards/LessonCard.scss
+++ b/src/Components/Generic/Cards/LessonCard.scss
@@ -22,7 +22,7 @@
     top: -3rem;
     left: 2rem;
 
-    font-family: Barlow;
+    font-family: Barlow, Roboto;
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
