--- a/src/Components/Generic/Cards/ModuleCard.scss
+++ b/src/Components/Generic/Cards/ModuleCard.scss
@@ -14,7 +14,7 @@
   padding: 0rem 2rem 0rem 2rem;
 
   .title {
-    font-family: Scope One;
+    font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 28px;
@@ -56,7 +56,7 @@
     color: $White-0;
     .label {
       margin-right: 1rem;
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 16px;
@@ -110,7 +110,7 @@
     justify-self: center;
 
     .value {
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: 500;
       font-size: 24px;
@@ -122,7 +122,7 @@
     }
 
     .label {
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: 500;
       font-size: 16px;
@@ -152,7 +152,7 @@
 
     color: $White-0;
     .label {
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 20px;
@@ -184,7 +184,7 @@
     align-items: center;
 
     span {
-      font-family: Scope One;
+      font-family: Scope One, Roboto;
       font-style: normal;
       font-weight: 900;
       font-size: 28px;
@@ -211,7 +211,7 @@
 
   p {
     color: #ffffff;
-    font-family: Lato;
+    font-family: Lato, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -223,7 +223,7 @@
     margin: 2rem 1rem 2rem 1rem;
 
     .title {
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 24px;
@@ -274,7 +274,7 @@
   text-align: center;
 
   span {
-    font-family: Barlow;
+    font-family: Barlow, Roboto;
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
