--- a/src/Components/Generic/Forms/assignment.scss
+++ b/src/Components/Generic/Forms/assignment.scss
@@ -1,7 +1,7 @@
 @import "../../../../static/styles/globals.scss";
 
 span {
-  font-family: Lato;
+  font-family: Lato, Roboto;
   font-style: normal;
   font-weight: lighter;
   font-size: 16px;
@@ -32,7 +32,7 @@ h3 {
 }
 
 .inp {
-  font-family: Lato;
+  font-family: Lato, Roboto;
   font-style: normal;
   font-weight: 600;
   font-size: 16px;
@@ -66,7 +66,7 @@ h3 {
 
     span {
       margin-right: 3rem;
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: 500;
       font-size: 20px;
@@ -98,7 +98,7 @@ h3 {
     border-radius: 5px;
     padding: 1rem 2rem 1rem 2rem;
 
-    font-family: Lato;
+    font-family: Lato, Roboto;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
