--- a/src/Components/Generic/Forms/module.scss
+++ b/src/Components/Generic/Forms/module.scss
@@ -5,7 +5,7 @@ h3 {
 }
 
 .ad_inp {
-  font-family: Lato;
+  font-family: Lato, Roboto;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -35,7 +35,7 @@ h3 {
 
     span {
       margin-right: 3rem;
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: 500;
       font-size: 20px;
