--- a/src/Components/Plugins/Classroom/Base.scss
+++ b/src/Components/Plugins/Classroom/Base.scss
@@ -10,14 +10,14 @@
 }
 
 %font {
-  font-family: Scope One;
+  font-family: Scope One, Roboto;
   font-style: normal;
   font-weight: normal;
   color: #000000;
 }
 
 %heading {
-  font-family: Barlow;
+  font-family: Barlow, Roboto;
   font-style: normal;
   font-weight: 600;
   font-size: 24px;
@@ -57,7 +57,7 @@
       .title {
         text-align: center;
         padding-top: 1rem;
-        font-family: Barlow;
+        font-family: Barlow, Roboto;
         font-style: normal;
         font-weight: bold;
         font-size: 24px;
@@ -69,7 +69,7 @@
         height: 64px;
         background: #e9e9e9;
         span {
-          font-family: Barlow;
+          font-family: Barlow, Roboto;
           font-style: normal;
           font-weight: bold;
           font-size: 24px;
@@ -96,7 +96,7 @@
         background: #267aa9;
         border: 1px solid #267aa9;
 
-        font-family: Scope One;
+        font-family: Scope One, Roboto;
         font-style: normal;
         font-weight: 900;
         font-size: 20px;
@@ -108,7 +108,7 @@
         margin-top: 1px;
         padding: 1rem;
         background: #6babcf;
-        font-family: Lato;
+        font-family: Lato, Roboto;
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
@@ -130,7 +130,7 @@
         margin-top: 1px;
         padding: 1rem;
         background: #6babcf;
-        font-family: Lato;
+        font-family: Lato, Roboto;
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
@@ -149,7 +149,7 @@
         margin-top: 1px;
         padding: 1rem;
         background: #5e92b1;
-        font-family: Lato;
+        font-family: Lato, Roboto;
         font-style: normal;
         font-weight: lighter;
         font-size: 20px;
@@ -174,7 +174,7 @@
       .module {
         margin-top: 3px;
 
-        font-family: Lato;
+        font-family: Lato, Roboto;
         font-style: normal;
         font-weight: lighter;
 
@@ -266,7 +266,7 @@
 
         border-radius: 5px;
 
-        font-family: Barlow;
+        font-family: Barlow, Roboto;
         font-style: normal;
         font-weight: 500;
         font-size: 20px;
@@ -309,7 +309,7 @@
 
       p {
         padding: 1rem 2rem 1rem 2rem;
-        font-family: Lato;
+        font-family: Lato, Roboto;
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
@@ -339,7 +339,7 @@
         border: 1px solid #809604;
         margin-top: 2rem;
         padding: 2rem 2rem 2rem 2rem;
-        font-family: Lato;
+        font-family: Lato, Roboto;
         font-style: normal;
         font-weight: lighter;
         font-size: 24px;
@@ -368,7 +368,7 @@
             box-sizing: border-box;
             border-radius: 2px;
 
-            font-family: Barlow;
+            font-family: Barlow, Roboto;
             font-style: normal;
             font-weight: normal;
             font-size: 20px;
@@ -397,7 +397,7 @@
           display: flex;
           flex-direction: column;
           span {
-            font-family: Lato;
+            font-family: Lato, Roboto;
             font-style: normal;
             font-weight: normal;
             font-size: 20px;
@@ -420,7 +420,7 @@
 
             p {
               padding: 1rem 2rem 1rem 2rem;
-              font-family: Lato;
+              font-family: Lato, Roboto;
               font-style: normal;
               font-weight: normal;
               font-size: 16px;
@@ -441,7 +441,7 @@
 
               border-radius: 2px;
 
-              font-family: Barlow;
+              font-family: Barlow, Roboto;
               font-style: normal;
               font-weight: 500;
               font-size: 20px;
