--- a/src/Components/Plugins/Contribute/Course/course.scss
+++ b/src/Components/Plugins/Contribute/Course/course.scss
@@ -50,7 +50,7 @@
     color: $White-0;
 
     span {
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: 500;
       font-size: 20px;
