--- a/src/Components/Plugins/Contribute/Draft/content.scss
+++ b/src/Components/Plugins/Contribute/Draft/content.scss
@@ -12,7 +12,7 @@
   }
 
   .sectionTitle {
-    font-family: Lato;
+    font-family: Lato, Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 32px;
@@ -46,7 +46,7 @@
   text-align: center;
 
   span {
-    font-family: Barlow;
+    font-family: Barlow, Roboto;
     font-style: normal;
     font-weight: bolder;
     font-size: 28px;
@@ -90,7 +90,7 @@
       text-align: center;
 
       span {
-        font-family: Barlow;
+        font-family: Barlow, Roboto;
         font-style: normal;
         font-weight: 600;
         font-size: 20px;
