--- a/src/Components/Plugins/Contribute/Draft/index.scss
+++ b/src/Components/Plugins/Contribute/Draft/index.scss
@@ -40,7 +40,7 @@
 
     .description {
       padding: 1rem;
-      font-family: Lato;
+      font-family: Lato, Roboto;
       font-style: normal;
       font-weight: normal;
       font-size: 20px;
@@ -109,7 +109,7 @@
 
         span {
           margin-right: 0.2rem;
-          font-family: Lato;
+          font-family: Lato, Roboto;
           font-style: normal;
           font-weight: normal;
           font-size: 16px;
@@ -198,7 +198,7 @@
           border-radius: 5px;
           background: #9b51e0;
 
-          font-family: Barlow;
+          font-family: Barlow, Roboto;
           font-style: normal;
           font-weight: normal;
           font-size: 16px;
@@ -213,7 +213,7 @@
           box-shadow: $shadow-all-1;
 
           .value {
-            font-family: Lato;
+            font-family: Lato, Roboto;
             font-weight: bold;
             font-size: 20px;
             line-height: 24px;
@@ -246,7 +246,7 @@
           justify-self: center;
 
           .value {
-            font-family: Lato;
+            font-family: Lato, Roboto;
             font-style: normal;
             font-weight: bolder;
             font-size: 24px;
@@ -258,7 +258,7 @@
           }
 
           .label {
-            font-family: Barlow;
+            font-family: Barlow, Roboto;
             font-style: normal;
             font-weight: normal;
             font-size: 16px;
