--- a/src/Components/Plugins/Index/Mentions/Mentions.scss
+++ b/src/Components/Plugins/Index/Mentions/Mentions.scss
@@ -6,7 +6,7 @@
 
   span {
     padding-left: 4rem;
-    font-family: Scope One;
+    font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: bolder;
     font-size: 48px;
