--- a/src/Components/Plugins/Index/WorkingBox/WorkingBox.scss
+++ b/src/Components/Plugins/Index/WorkingBox/WorkingBox.scss
@@ -12,7 +12,7 @@
   justify-content: center;
   span {
     // padding-left: 1rem;
-    font-family: Scope One;
+    font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: bolder;
     font-size: 48px;
@@ -56,7 +56,7 @@
       border-radius: 5px;
       border: 0px;
       box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.15);
-      font-family: Barlow;
+      font-family: Barlow, Roboto;
       font-style: normal;
       font-weight: 500;
       font-size: 28px;
