new course creation page changed

--- a/src/Components/Plugins/Contribute/Course/course.scss
+++ b/src/Components/Plugins/Contribute/Course/course.scss
@@ -5,11 +5,12 @@
 }
 
 .page {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .heading {
   @extend %heading-1;
+  text-align: center;
 }
 
 .courseCreationPlane {
