--- a/src/Components/Generic/Error/error.scss
+++ b/src/Components/Generic/Error/error.scss
@@ -1,4 +1,34 @@
-@import "./globals.scss";
+@import "../../../../static/styles/globals.scss";
+
+.action_btns {
+  padding: 2rem 5% 2rem 5%;
+  text-align: center;
+  button {
+    display: flex;
+    flex-direction: row;
+    place-content: center;
+    place-items: center;
+
+    img {
+      margin-right: 1rem;
+      height: 3rem;
+      width: 3rem;
+      transition: 0.3s ease-out;
+    }
+    span {
+      font-size: 32px;
+    }
+
+    &:hover {
+      img {
+        transform: translateX(-20px);
+      }
+      span {
+        text-decoration: underline;
+      }
+    }
+  }
+}
 
 .not_found {
   padding: 2rem 5% 2rem 5%;
@@ -20,6 +50,7 @@
       font-style: normal;
       font-weight: bold;
       font-size: 64px;
+      line-height: 4rem;
 
       color: $Base-primary;
     }
