--- a/src/Components/Plugins/Courses/detailed.scss
+++ b/src/Components/Plugins/Courses/detailed.scss
@@ -183,12 +183,14 @@
     .tagBox {
       margin-top: 1.5rem;
       height: 72px;
-
-      box-sizing: border-box;
       background: $White-0;
       box-shadow: $shadow-all-1;
       border-radius: 5px;
       padding: 1rem;
+      border: 0px;
+      display: flex;
+      flex-direction: row;
+      place-items: center;
 
       .tag {
         padding: 0.3rem 1rem 0.3rem 1rem;
@@ -198,6 +200,7 @@
         border-radius: 5rem;
         box-shadow: $shadow-all-1;
         font-weight: normal;
+        font-size: 20px;
       }
     }
   }
