--- a/src/Components/Generic/Cards/LgCard/draftcard.scss
+++ b/src/Components/Generic/Cards/LgCard/draftcard.scss
@@ -48,6 +48,7 @@
   background: $grad-8;
   border-radius: 10px;
   padding: 1rem 2rem 2rem 2rem;
+  animation: slide-up 0.4s ease;
 }
 
 .loader {
@@ -169,5 +170,16 @@
     background: #ffffffd3;
     box-shadow: $shadow-1;
     border-radius: 5px;
+  }
+}
+
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(2rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
