--- a/src/Components/Generic/Cards/LgCard/publishedCard.scss
+++ b/src/Components/Generic/Cards/LgCard/publishedCard.scss
@@ -6,6 +6,7 @@
   background: linear-gradient(205.1deg, #da7eff 0.56%, #fdc25c 101.17%);
   border-radius: 10px;
   padding: 1rem 2rem 2rem 2rem;
+  animation: slide-up 0.4s ease;
 
   .head {
     display: flex;
@@ -215,5 +216,16 @@
       width: 100%;
       height: 100%;
     }
+  }
+}
+
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(2rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
