--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -14,9 +14,7 @@
 
   .topCourses {
     margin: 3rem 0 1rem 0;
-
-    height: 580px;
-    background: $White-2;
+    background: $White-2b;
   }
 
   .partners {
