--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -7,6 +7,7 @@ $Base-secondary: #100c30;
 $White-0: #ffffff;
 $White-1: #fcfcfc;
 $White-2: #f7f7f7;
+$White-2b: #f0f0f0;
 $White-3: #dddddd;
 $White-4: #e7e7e7;
 
