--- a/src/Components/Generic/Cards/CourseCard.scss
+++ b/src/Components/Generic/Cards/CourseCard.scss
@@ -2,7 +2,8 @@
 
 %card {
   width: 220px;
-  height: 300px;
+  // height: 300px;
+  padding-bottom: 1rem;
 
   background: $White-0;
   border: 0px;
@@ -10,7 +11,7 @@
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 4fr 3fr 1.5fr 1.5fr;
+  grid-template-rows: 4fr auto auto auto;
   grid-gap: 5px;
   box-shadow: $shadow-all-1;
 }
@@ -133,6 +134,7 @@
 .rating {
   align-self: center;
   justify-self: center;
+  padding: 8px;
 
   span {
     padding: 0;
