--- a/src/Components/Plugins/Courses/courses.scss
+++ b/src/Components/Plugins/Courses/courses.scss
@@ -8,7 +8,7 @@
 }
 .ad_overlayBtn {
   width: 100%;
-  height: 100px;
+  // height: 100px;
   padding: 0 5% 0 5%;
   // background: #21688a;
 
@@ -16,7 +16,7 @@
     float: right;
     height: 48px;
     border: 0px;
-    margin: 2rem;
+    margin: 0 2rem;
     border-radius: 5px;
     span {
       font-family: lato;
@@ -130,13 +130,13 @@
   text-align: left;
   span {
     border-radius: 5px;
-    background: $grad-12;
+    background: $Base_primary;
     font-family: Scope One, Roboto;
     font-style: normal;
     font-weight: 900;
     font-size: 28px;
     line-height: 66px;
-    padding: 1rem 16rem 0.5rem 2rem;
+    padding: 1rem 2rem 0.5rem 2rem;
     color: $White-0;
   }
 }
