Modified testimonials bg changed

--- a/src/Components/Plugins/Index/index.scss
+++ b/src/Components/Plugins/Index/index.scss
@@ -26,9 +26,9 @@
   .testimonials {
     margin: 2rem 2.5% 2rem 2.5%;
     // height: 510px;
-    box-shadow: $shadow-all-3;
+    box-shadow: $shadow-all-1;
 
-    background: $grad-6;
+    background: #ffae6c;
     border-radius: 10px;
     padding-bottom: 1rem;
   }
