--- a/src/Components/Plugins/Index/Testimonials/Testimonials.scss
+++ b/src/Components/Plugins/Index/Testimonials/Testimonials.scss
@@ -29,6 +29,7 @@
     width: 340px;
 
     .box {
+      box-shadow: $shadow-0;
       width: 340px;
       margin-top: -30px;
       padding: 2rem;
