--- a/src/Components/Generic/Navbar/navbar.scss
+++ b/src/Components/Generic/Navbar/navbar.scss
@@ -194,7 +194,7 @@
   transition: 0.2s ease;
   border-radius: 5px;
   &:hover {
-    // background: $Blue-3b;
+    background: $Blue-3b;
     cursor: pointer;
     transform: translateY(-5px);
   }
