title of the cards are modified to be contained

--- a/src/Components/Generic/Cards/CourseCard.scss
+++ b/src/Components/Generic/Cards/CourseCard.scss
@@ -96,15 +96,15 @@
 
 .title {
   // text-align: left;
-  padding: 0 1rem 0 1rem;
+  padding: 0 0.5rem 0 0.5rem;
   span {
     // justify-self: center;
     // padding: 1rem;
 
     font-family: Scope One, Roboto;
     font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
+    font-weight: normal;
+    font-size: 16px;
     line-height: 24px;
 
     color: #000000;
