--- a/static/styles/globals.scss
+++ b/static/styles/globals.scss
@@ -30,6 +30,7 @@ $Yellow-4: #ffefd2;
 $Yellow-9: #a17070;
 $Yellow-9b: #461e1e;
 $Yellow-10: #ffa600;
+$Yellow-11: #ff9b6d;
 
 $Purple-1: #270036;
 $Purple-1b: #6200ff;
