--- a/src/Components/Generic/Cards/LessonCard.scss
+++ b/src/Components/Generic/Cards/LessonCard.scss
@@ -1,37 +1,36 @@
+@import "../../../../static/styles/globals.scss";
 .lessonCard {
-  width: 300px;
+  width: 360px;
   padding-bottom: 8px;
   padding-right: 8px;
   // height: 210px;
-  background: #000000bd;
+  background: #fafafae3;
 
   border-radius: 5px;
 
   .lesson {
-    width: 300px;
-    height: 160px;
-
-    iframe {
-      width: 100%;
-      height: 100%;
-    }
+    width: 360px;
+    // height: 160px;
   }
 
-  span {
-    position: relative;
+  p {
     width: 252px;
-    // height: 38px;
-    // top: -3rem;
-    left: 1rem;
-    text-align: justify;
+    padding: 0rem 0.5rem 0 0.5rem;
+    // text-align: justify;
 
     font-family: Barlow, Roboto;
     font-style: normal;
-    font-weight: 600;
+    font-weight: normal;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 24px;
 
-    color: #ececec;
+    color: #000000;
+  }
+
+  transition: 0.2s ease;
+
+  &:hover {
+    box-shadow: $shadow-all-3;
   }
 }
 
@@ -39,7 +38,7 @@
   display: flex;
   flex-direction: row-reverse;
   place-content: space-between;
-  margin-top: 5px;
+  margin-top: 1rem;
   margin-right: 1rem;
 
   .editBar {
