--- a/src/Components/Plugins/Contribute/Draft/index.scss
+++ b/src/Components/Plugins/Contribute/Draft/index.scss
@@ -9,14 +9,13 @@
 }
 
 .page {
-  padding-top: 1rem;
   background: $White-2;
 }
 
 .course {
-  padding: 1rem 2rem 2rem 2rem;
-  border-radius: 10px;
-  background: $grad-3;
+  padding: 2rem;
+  border-radius: 0 0 20px 20px;
+  background: #9c92f8;
   box-shadow: $shadow-2;
   .title {
     @extend %heading-0;
@@ -45,9 +44,9 @@
       font-weight: normal;
       font-size: 20px;
       line-height: 24px;
-      box-shadow: $shadow-all-2;
+      // box-shadow: $shadow-all-2;
       color: #3f3e3e;
-      background: $White-0;
+      background: $White-0b;
 
       height: 210px;
 
@@ -58,13 +57,13 @@
     }
 
     .tagBox {
-      margin-top: 2rem;
+      margin-top: 1rem;
       height: 72px;
-      box-shadow: $shadow-all-2;
+      // box-shadow: $shadow-all-2;
 
       border-radius: 5px;
       border: 0px;
-      background: $White-0;
+      background: $White-0b;
       padding: 1rem;
 
       display: flex;
@@ -82,11 +81,131 @@
       }
     }
 
+    .extra {
+      // height: 160px;
+      margin-top: 1rem;
+      padding-top: 1rem;
+      background: $White-0b;
+
+      // border: 1px solid $White-3;
+      // box-sizing: border-box;
+      border-radius: 5px;
+      border: 0px;
+
+      display: flex;
+      flex-direction: row;
+      // box-shadow: $shadow-all-3;
+
+      .infoBox {
+        display: flex;
+        flex-direction: column;
+        margin: 0 1rem 0 1rem;
+        place-items: center;
+
+        .authSub {
+          display: flex;
+          flex-direction: row;
+          width: 320px;
+          // border: 1px solid #9b51e0;
+          border: 0px;
+          border-radius: 5px;
+          background: #9b51e0;
+
+          font-family: Barlow, Roboto;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 24px;
+          /* identical to box height */
+          text-align: center;
+          place-content: space-between;
+          padding: 0.5rem 1rem 0.5rem 1rem;
+
+          margin-bottom: 1rem;
+          color: $White-0;
+          box-shadow: $shadow-all-1;
+
+          .value {
+            font-family: Lato, Roboto;
+            font-weight: bold;
+            font-size: 20px;
+            line-height: 24px;
+          }
+        }
+
+        .author {
+          background: #a9cf00;
+          span {
+            font-weight: normal;
+            color: $White-0;
+          }
+        }
+      }
+
+      .stats {
+        background: $Yellow-1;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding-top: 1rem;
+        margin: 0 1rem 1rem 1rem;
+        border-radius: 10px;
+        .stat {
+          // width: 160px;
+          height: 64px;
+          padding: 0 1rem 0 1rem;
+
+          // border: 1px solid #919191;
+          box-sizing: border-box;
+          border-radius: 2px;
+
+          text-align: center;
+          justify-self: center;
+
+          .value {
+            font-family: Lato, Roboto;
+            font-style: normal;
+            font-weight: bolder;
+            font-size: 24px;
+            line-height: 34px;
+            /* identical to box height */
+            text-align: center;
+
+            color: #000000;
+          }
+
+          .label {
+            font-family: Barlow, Roboto;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 24px;
+            /* identical to box height */
+            text-align: center;
+
+            color: $Black-1;
+          }
+
+          .credits {
+            color: #f3971f;
+          }
+        }
+      }
+    }
+  }
+
+  .secondary {
+    display: flex;
+    flex-direction: column;
+
+    width: 380px;
+    // justify-content: space-between;
+
     .actionBar {
-      margin-top: 2rem;
+      // margin-top: 2rem;
       // height: 72px;
-      box-shadow: $shadow-all-2;
-      background: $White-0;
+      // box-shadow: $shadow-all-2;
+      background: $White-0b;
       border-radius: 5px;
       border: 0px;
       padding: 1rem;
@@ -137,22 +256,6 @@
         }
       }
 
-      .publish {
-        background: #03b86c;
-
-        &:hover {
-          background: #14dd89;
-        }
-      }
-
-      .open_course {
-        background: #fb9700;
-
-        &:hover {
-          background: #f3b14e;
-        }
-      }
-
       .delete {
         background: #cf002d;
         &:hover {
@@ -160,144 +263,120 @@
         }
       }
     }
-  }
 
-  .secondary {
-    display: flex;
-    flex-direction: column;
-
-    width: 380px;
-    // justify-content: space-between;
-
-    .extra {
-      // height: 160px;
-      padding: 1rem 0 1rem 0;
-      background: $White-0;
-
-      // border: 1px solid $White-3;
-      // box-sizing: border-box;
-      border-radius: 5px;
-      border: 0px;
-
-      display: flex;
-      flex-direction: column;
-      box-shadow: $shadow-all-3;
-
-      .infoBox {
-        display: flex;
-        flex-direction: column;
-        margin: 0 1rem 0 1rem;
-        place-items: center;
-
-        .authSub {
-          display: flex;
-          flex-direction: row;
-          width: 320px;
-          // border: 1px solid #9b51e0;
-          border: 0px;
-          border-radius: 5px;
-          background: #9b51e0;
-
-          font-family: Barlow, Roboto;
-          font-style: normal;
-          font-weight: normal;
-          font-size: 16px;
-          line-height: 24px;
-          /* identical to box height */
-          text-align: center;
-          place-content: space-between;
-          padding: 0.5rem 1rem 0.5rem 1rem;
-
-          margin-bottom: 1rem;
-          color: $White-0;
-          box-shadow: $shadow-all-1;
-
-          .value {
-            font-family: Lato, Roboto;
-            font-weight: bold;
-            font-size: 20px;
-            line-height: 24px;
-          }
-        }
-
-        .author {
-          background: #a9cf00;
-          span {
-            font-weight: normal;
-            color: $White-0;
-          }
-        }
-      }
-
-      .stats {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        .stat {
-          // width: 160px;
-          height: 64px;
-          padding: 0 1rem 0 1rem;
-
-          // border: 1px solid #919191;
-          box-sizing: border-box;
-          border-radius: 2px;
-
-          text-align: center;
-          justify-self: center;
-
-          .value {
-            font-family: Lato, Roboto;
-            font-style: normal;
-            font-weight: bolder;
-            font-size: 24px;
-            line-height: 34px;
-            /* identical to box height */
-            text-align: center;
-
-            color: #000000;
-          }
-
-          .label {
-            font-family: Barlow, Roboto;
-            font-style: normal;
-            font-weight: normal;
-            font-size: 16px;
-            line-height: 24px;
-            /* identical to box height */
-            text-align: center;
-
-            color: $Black-1;
-          }
-
-          .credits {
-            color: #f3971f;
-          }
-        }
-      }
-    }
-
-    .optionsBox {
-      // TODO: When adding more content here remove height
-      height: 200px;
+    .message {
       margin-top: 2rem;
       box-shadow: $shadow-all-3;
       background: $White-0;
       border: 0px;
       border-radius: 5px;
-
-      display: flex;
-      flex-direction: column-reverse;
       padding: 1rem 2rem 1rem 2rem;
 
-      .save {
-        align-self: center;
-        background: #397ef0;
+      p {
+        text-align: left;
+        @extend %BtnFont-1;
+        font-size: 20px;
+        color: $Black-1;
+      }
+
+      .publish {
         height: 48px;
-        width: 160px;
+        margin-top: 1rem;
+        padding: 0 1rem 0 1rem;
+        float: right;
+
         border-radius: 5px;
         border: 0px;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background: #03b86c;
+
         span {
-          @extend %BtnFont-1;
+          margin-right: 0.2rem;
+          font-family: Lato, Roboto;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 29px;
+          /* identical to box height */
+
+          text-align: center;
+
+          color: #ffffff;
+        }
+        transition: 0.2s ease;
+        img {
+          transition: transform 0.2s ease;
+        }
+
+        &:hover {
+          cursor: pointer;
+          box-shadow: $shadow-all-3;
+          img {
+            transform: scale(1.3);
+          }
+        }
+      }
+    }
+
+    .warning {
+      // TODO: When adding more content here remove height
+      margin-top: 2rem;
+      box-shadow: $shadow-all-3;
+      background: $Yellow-2;
+      border: 0px;
+      border-radius: 5px;
+      padding: 1rem 2rem 1rem 2rem;
+
+      p {
+        text-align: left;
+        @extend %BtnFont-1;
+        font-size: 20px;
+        color: $Black-1;
+      }
+
+      .open_course {
+        height: 48px;
+        margin-top: 1rem;
+        padding: 0 1rem 0 1rem;
+        float: right;
+
+        border-radius: 5px;
+        border: 0px;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background: #fb5c00;
+
+        span {
+          margin-right: 0.2rem;
+          font-family: Lato, Roboto;
+          font-style: normal;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 29px;
+          /* identical to box height */
+
+          text-align: center;
+
+          color: #ffffff;
+        }
+        transition: 0.2s ease;
+        img {
+          transition: transform 0.2s ease;
+        }
+
+        &:hover {
+          cursor: pointer;
+          box-shadow: $shadow-all-3;
+          img {
+            transform: scale(1.3);
+          }
         }
       }
     }
