--- a/src/Components/Plugins/Contribute/Draft/content.scss
+++ b/src/Components/Plugins/Contribute/Draft/content.scss
@@ -1,10 +1,10 @@
 @import "../../../../../static/styles/globals.scss";
 .container {
-  padding: 0 5% 0 5%;
+  padding: 0 10% 0 10%;
 }
 .courseContent {
   // margin: 2rem 0 2rem 0;
-  padding-top: 1rem;
+  padding: 1rem 0 2rem 0;
   // background: #fffaf3;
 
   .section {
